--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,13 +12,14 @@
     "forceConsistentCasingInFileNames": true,
     "esModuleInterop": true,
     "isolatedModules": true,
+    "noUncheckedIndexedAccess": true,
     "allowSyntheticDefaultImports": true,
     "jsx": "react-jsx",
     "moduleResolution": "node",
     "resolveJsonModule": true,
     "experimentalDecorators": true,
     "paths": {
-      "@src/*": ["src/*"],
+      "@src/*": ["src/*"]
     },
     "jsxImportSource": "@emotion/react"
   },
