--- a/package.json
+++ b/package.json
@@ -79,5 +79,10 @@
     "webpack-cli": "^4.10.0",
     "webpack-dev-server": "^4.11.1",
     "webpack-merge": "^5.8.0"
+  },
+  "proxy": {
+    "/riot": {
+      "target": "https://kr.api.riotgames.com"
+    }
   }
 }
