--- a/front/package.json
+++ b/front/package.json
@@ -14,6 +14,7 @@
     "mobx": "^6.6.2",
     "mobx-react": "^7.5.3",
     "react": "^18.2.0",
+    "react-device-detect": "^2.2.3",
     "react-dom": "^18.2.0",
     "react-refresh": "^0.14.0",
     "react-router-dom": "^6.6.1"
@@ -24,10 +25,10 @@
   },
   "devDependencies": {
     "@babel/core": "^7.20.5",
+    "@babel/plugin-transform-optional-chaining": "^7.23.0",
     "@babel/preset-env": "^7.20.2",
     "@babel/preset-react": "^7.18.6",
     "@babel/preset-typescript": "^7.18.6",
-    "@babel/plugin-transform-optional-chaining": "^7.23.0",
     "@emotion/react": "^11.10.5",
     "@pmmmwh/react-refresh-webpack-plugin": "^0.5.8",
     "@svgr/webpack": "^6.5.1",
