--- a/front/package.json
+++ b/front/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "@emotion/styled": "^11.10.5",
     "@mui/icons-material": "^5.10.14",
+    "@mui/material": "5.14.18",
     "@types/react-router-dom": "^5.3.3",
     "axios": "^1.2.1",
     "mobx": "^6.6.2",
