--- a/nginx.conf
+++ b/nginx.conf
@@ -1,16 +1,71 @@
-server {
-	listen 80;
-    
-	root /usr/share/nginx/html;
+worker_processes  2;
 
-    index index.html;
+error_log  /var/log/nginx.error_log  info;
 
-    location / {
-        try_files $uri /index.html;
-    }
+events {
+    worker_connections   2000;
 
-	location /back {
-		add_header 'Access-Control-Allow-Origin' http://localhost:80;
-        proxy_pass http://localhost:5000/;
+    # use [ kqueue | epoll | /dev/poll | select | poll ];
+    use kqueue;
+}
+
+http {
+    include       conf/mime.types;
+    default_type  application/octet-stream;
+
+
+    log_format main      '$remote_addr - $remote_user [$time_local] '
+                         '"$request" $status $bytes_sent '
+                         '"$http_referer" "$http_user_agent" '
+                         '"$gzip_ratio"';
+
+    log_format download  '$remote_addr - $remote_user [$time_local] '
+                         '"$request" $status $bytes_sent '
+                         '"$http_referer" "$http_user_agent" '
+                         '"$http_range" "$sent_http_content_range"';
+
+    client_header_timeout  3m;
+    client_body_timeout    3m;
+    send_timeout           3m;
+
+    client_header_buffer_size    1k;
+    large_client_header_buffers  4 4k;
+
+    gzip on;
+    gzip_min_length  1100;
+    gzip_buffers     4 8k;
+    gzip_types       text/plain;
+
+    output_buffers   1 32k;
+    postpone_output  1460;
+
+    sendfile         on;
+    tcp_nopush       on;
+    tcp_nodelay      on;
+    send_lowat       12000;
+
+    keepalive_timeout  75 20;
+
+    #lingering_time     30;
+    #lingering_timeout  10;
+    #reset_timedout_connection  on;
+
+
+    server {
+		listen 80;
+		
+		root /usr/share/nginx/html;
+
+		index index.html;
+
+		location / {
+			try_files $uri /index.html;
+		}
+
+		location /back {
+			add_header 'Access-Control-Allow-Origin' http://localhost:80;
+			proxy_pass http://localhost:5000/;
+		}
 	}
+
 }
