--- a/nginx.conf
+++ b/nginx.conf
@@ -1,28 +1,17 @@
-worker_processes  2;
 
-error_log  /var/log/nginx.error_log  info;
+server {
+	listen 80;
+	
+	root /usr/share/nginx/html;
 
-events {
-    worker_connections   2000;
-}
+	index index.html;
 
-http {
-
-    server {
-		listen 80;
-		
-		root /front/build;
-
-		index index.html;
-
-		location / {
-			try_files $uri /index.html;
-		}
-
-		location /back {
-			add_header 'Access-Control-Allow-Origin' http://localhost:80;
-			proxy_pass http://localhost:5000/;
-		}
+	location / {
+		try_files $uri $uri/ /index.html;
 	}
 
+	location /back {
+		add_header 'Access-Control-Allow-Origin' http://localhost:80;
+		proxy_pass http://localhost:5000/;
+	}
 }
