--- a/front/src/projects/project0/store/projects.json
+++ b/front/src/projects/project0/store/projects.json
@@ -7,9 +7,9 @@
     },
     "radius": 100,
     "title": "N퀸 문제",
-    "description": "P=NP 문제에 대한 간단한 요약과 NP-complete 문제 중 하나인 n-퀸 문제를 플레이할 수 있는 게임으로 구현. 문제의 해답을 구하는 과정을 백 트래킹 알고리즘으로 구현하고 비동기 함수를 이용해 시각화",
+    "description": "NP-complete 문제인 n-queen 문제 구현하기 + 간단한 설명",
     "route": "chess",
-    "tag": ["짧은 글", "웹 게임", "상태 관리", "알고리즘 시각화"],
+    "tag": ["짧은 글", "알고리즘 시각화"],
     "icon": "queen"
   },
   {
@@ -20,9 +20,9 @@
     },
     "radius": 100,
     "title": "정렬 시각화",
-    "description": "버블 정렬, 머지 정렬, 퀵 정렬, 팀 정렬을 javascript 코드로 구현하고 비동기 함수를 이용해 정렬 과정을 시각화",
+    "description": "bubble, merge, quick 정렬 과정을 시각화",
     "route": "sort",
-    "tag": ["상태 관리", "알고리즘 시각화"],
+    "tag": ["알고리즘 시각화"],
     "icon": "sort"
   },
   {
@@ -35,7 +35,7 @@
     "title": "롤 전적검색",
     "description": "Riot API를 이용한 모의 전적검색 사이트 개발",
     "route": "lol",
-    "tag": ["상태 관리", "open API"],
+    "tag": ["open API"],
     "icon": "lol"
   },
   {
@@ -48,7 +48,7 @@
     "title": "수박 게임",
     "description": "직접 만든 유사 물리엔진으로 수박 게임 구현하기",
     "route": "suika",
-    "tag": ["유사 물리엔진", "웹 게임"],
+    "tag": ["웹 게임"],
     "icon": "suika"
   }
 ]
