--- a/nginx.conf
+++ b/nginx.conf
@@ -10,6 +10,6 @@ server {
 
 	location /back {
 		add_header 'Access-Control-Allow-Origin' http://localhost:80;
-		proxy_pass http://localhost:5000/;
+		proxy_pass http://localhost:5000;
 	}
 }
