--- a/front/nginx.conf
+++ b/front/nginx.conf
@@ -10,6 +10,8 @@ server {
 
 	location /back {
 		add_header 'Access-Control-Allow-Origin' http://localhost:80;
+		rewrite ^/back(.*)$ $1 break;
 		proxy_pass http://localhost:5000;
+		
 	}
 }
