--- a/front/nginx.conf
+++ b/front/nginx.conf
@@ -11,7 +11,7 @@ server {
 	location /back {
 		add_header 'Access-Control-Allow-Origin' http://localhost:80;
 		rewrite ^/back(.*)$ $1 break;
-		proxy_pass myback://back:5000;
+		proxy_pass http://back:5000;
 		
 	}
 }
