--- a/front/src/projects/project0/store/projects.json
+++ b/front/src/projects/project0/store/projects.json
@@ -33,7 +33,7 @@
     },
     "radius": 100,
     "title": "롤 전적검색",
-    "description": "Riot API를 이용한 모의 전적검색 사이트 개발",
+    "description": "Riot API를 이용한 모의 전적검색 사이트 만들기 (pc버전에서 RIOT API token을 업데이트해야 사용가능합니다)",
     "route": "lol",
     "tag": ["open API"],
     "icon": "lol"
