--- a/src/projects/project0/store/staticProjects.json
+++ b/src/projects/project0/store/staticProjects.json
@@ -45,7 +45,7 @@
       "y": 200
     },
     "radius": 100,
-    "title": "포켓몬 데미지 계산기",
+    "title": "포켓몬 계산기",
     "description": "포켓몬스터 스칼렛/바이올렛 데미지 계산기",
     "route": "pokedam",
     "tag": ["상태 관리"],
