--- a/src/projects/project0/store/staticProjects.json
+++ b/src/projects/project0/store/staticProjects.json
@@ -50,5 +50,18 @@
     "route": "pokedam",
     "tag": ["상태 관리"],
     "icon": "pokedam"
+  },
+  {
+    "id": 5,
+    "pos": {
+      "x": 1300,
+      "y": 200
+    },
+    "radius": 100,
+    "title": "데이터 셀 분석",
+    "description": "csv 데이터 셀로 업로드 후 간단한 분석 기능 구현",
+    "route": "cell",
+    "tag": ["상태 관리"],
+    "icon": "cell"
   }
 ]
